# callme_server

./: Cargo.toml  README.md
.sqlx/: query-08d6da291f5734cb0256910ca8bdc768d28f670e1fa428746cf8e27e59ea0106.json  query-4f85839e5c52fd827827275c5f282b8cbfe6e7a1fc9b472447110b7a9cceb375.json  query-a24b38beb41939ab0d0b5be9da0a5fbf60747e339c774e7165520354bd4ed246.json  query-b872aa3ed45ccc6daeb82a048a5673435f312395b9783b8f6d2bbc316f67dfc7.json  query-e7190d448f89d6aaa31471c256372457ce502ef9974f9b27dbfc6fa50c3e75d0.json  query-e81a6d7ed68e84ed297f49eaf6b1bba7d2a4dbd8a855eeec9d913ad813db0a95.json  query-f8259b4b7c8b6797a6c4cffa4f95e5f429aafbd6c312feb24b9af824da7b15ec.json
migrations/: 20241017032418_call_phone_task_table.sql  20241017033042_whitelist_users_table.sql
src/: main.rs  state.rs
src/controller/: mod.rs  oncall.rs
