[package]
name = "callme_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "callme_server"
path = "src/main.rs"


[dependencies]
axum = "0.7.7"
axum-macros = "0.4.2"
axum-server = "0.7.1"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ['cors', 'trace', 'fs'] }
sqlx = { version = "0.8.2", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlite",
    "uuid",
    "chrono",
    "migrate",
    "bigdecimal",
] }
sqlx-cli = "0.8.2"
anyhow = "1.0.89"
chrono = "0.4.38"
